--- a/index.html
+++ b/index.html
@@ -2,143 +2,123 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mitsubishi Sales – Lisa Suryani Purba</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Mitsubishi Sales - Lisa Purba</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="container header-container">
-      <a href="index.html" class="logo"><img src="assets/logo.svg" alt="Mitsubishi Motors"></a>
-      <nav>
+    <div class="container header-inner">
+      <a href="index.html" class="logo"><img src="assets/logo.svg" alt="Mitsubishi"></a>
+      <nav class="nav">
         <ul class="nav-list">
           <li><a href="index.html" class="active">Beranda</a></li>
           <li><a href="produk.html">Produk</a></li>
           <li><a href="simulasi.html">Simulasi Cicilan</a></li>
         </ul>
       </nav>
-      <a href="https://wa.me/6282173541831" class="btn-whatsapp">Hubungi Kami</a>
+      <a href="https://wa.me/6282173541831" class="btn btn-outline">Hubungi Kami</a>
     </div>
   </header>
 
   <!-- Hero Slider -->
   <section class="hero-slider">
-    <div class="slider">
+    <div class="slider" id="main-slider">
       <div class="slide" style="background-image:url('assets/images/hero1.jpg')">
-        <div class="slide-content">
+        <div class="slide-overlay">
           <h1>Drive Your Ambition</h1>
-          <p>Temukan Penawaran Spesial untuk Unit Mitsubishi Terbaru</p>
-          <a href="produk.html" class="btn-primary">Lihat Produk</a>
+          <p>Penawaran Spesial Mitsubishi Terbaru</p>
+          <a href="produk.html" class="btn btn-primary">Lihat Produk</a>
         </div>
       </div>
       <div class="slide" style="background-image:url('assets/images/hero2.jpg')">
-        <div class="slide-content">
-          <h1>Solusi Pembiayaan Mudah</h1>
-          <p>Kalkulasi Cicilan Sesuai Kebutuhan Anda</p>
-          <a href="simulasi.html" class="btn-primary">Simulasi Cicilan</a>
+        <div class="slide-overlay">
+          <h1>Simulasi Cicilan Mudah</h1>
+          <p>Hitung Cicilan Sesuai Budget Anda</p>
+          <a href="simulasi.html" class="btn btn-primary">Mulai Simulasi</a>
         </div>
       </div>
       <div class="slide" style="background-image:url('assets/images/hero3.jpg')">
-        <div class="slide-content">
-          <h1>Layanan Pribadi oleh Lisa</h1>
-          <p>Konsultasi Gratis via WhatsApp</p>
-          <a href="https://wa.me/6282173541831" class="btn-primary">Chat Sekarang</a>
+        <div class="slide-overlay">
+          <h1>Konsultasi Pribadi</h1>
+          <p>Dapatkan Bantuan Langsung Dari Lisa</p>
+          <a href="https://wa.me/6282173541831" class="btn btn-primary">Chat Sekarang</a>
         </div>
       </div>
     </div>
   </section>
 
   <!-- About -->
-  <section class="about">
-    <div class="container about-container">
-      <h2>Tentang Lisa</h2>
-      <div class="about-grid">
-        <img src="assets/images/lisa.jpg" alt="Lisa Suryani Purba">
-        <div>
-          <p>Halo, saya <strong>Lisa Suryani Purba</strong>, Sales Counter Mitsubishi Jambi. Dengan pengalaman lebih dari 5 tahun, saya siap membantu Anda mendapatkan mobil idaman dengan layanan cepat dan profesional.</p>
-        </div>
+  <section class="about container">
+    <div class="about-inner">
+      <img src="assets/images/lisa.jpg" alt="Lisa Purba" class="about-img">
+      <div class="about-text">
+        <h2>Tentang Lisa Purba</h2>
+        <p>Halo, saya <strong>Lisa Suryani Purba</strong>, Sales Mitsubishi Jambi dengan 5+ tahun pengalaman. Saya siap membantu Anda menemukan mobil ideal dengan layanan cepat dan ramah.</p>
       </div>
     </div>
   </section>
 
-  <!-- Products -->
-  <section class="featured-products">
-    <div class="container">
-      <h2>Produk Unggulan</h2>
-      <div class="product-grid">
-        <div class="product-item">
-          <img src="assets/images/suv1.jpg" alt="Model X">
-          <h3>Mitsubishi Xpander</h3>
-          <p>Rp 300.000.000*</p>
-        </div>
-        <div class="product-item">
-          <img src="assets/images/sedan1.jpg" alt="Model Y">
-          <h3>Mitsubishi Lancer</h3>
-          <p>Rp 280.000.000*</p>
-        </div>
-        <div class="product-item">
-          <img src="assets/images/truck1.jpg" alt="Model Z">
-          <h3>Mitsubishi Triton</h3>
-          <p>Rp 350.000.000*</p>
-        </div>
-      </div>
-      <p class="note">*Harga OTR Jambi, dapat berubah sewaktu-waktu.</p>
+  <!-- Featured Products -->
+  <section class="featured container">
+    <h2 class="section-title">Produk Unggulan</h2>
+    <div class="card-grid">
+      <article class="card">
+        <img src="assets/images/suv1.jpg" alt="Xpander" class="card-img">
+        <h3 class="card-title">Mitsubishi Xpander</h3>
+        <p class="card-price">Rp 300.000.000</p>
+      </article>
+      <article class="card">
+        <img src="assets/images/sedan1.jpg" alt="Lancer" class="card-img">
+        <h3 class="card-title">Mitsubishi Lancer</h3>
+        <p class="card-price">Rp 280.000.000</p>
+      </article>
+      <article class="card">
+        <img src="assets/images/truck1.jpg" alt="Triton" class="card-img">
+        <h3 class="card-title">Mitsubishi Triton</h3>
+        <p class="card-price">Rp 350.000.000</p>
+      </article>
     </div>
   </section>
 
-  <!-- Promo -->
-  <section class="promo">
-    <div class="container">
-      <h2>Promo Terbaru</h2>
-      <div class="promo-grid">
-        <img src="assets/images/promo1.jpg" alt="Promo 1">
-        <img src="assets/images/promo2.jpg" alt="Promo 2">
-        <img src="assets/images/promo3.jpg" alt="Promo 3">
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section class="testimonials">
-    <div class="container">
-      <h2>Testimonials</h2>
-      <div class="testi-slider">
-        <div class="testi-item">
-          <p>“Pelayanan luar biasa oleh Lisa!”</p>
-          <span>- Budi</span>
-        </div>
-        <div class="testi-item">
-          <p>“Proses cepat dan mudah, recommended!”</p>
-          <span>- Andi</span>
-        </div>
-      </div>
+  <!-- Promo Section -->
+  <section class="promo container">
+    <h2 class="section-title">Promo Terbaru</h2>
+    <div class="promo-grid">
+      <div class="promo-item"><img src="assets/images/promo1.jpg" alt="Promo"></div>
+      <div class="promo-item"><img src="assets/images/promo2.jpg" alt="Promo"></div>
+      <div class="promo-item"><img src="assets/images/promo3.jpg" alt="Promo"></div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="container footer-container">
-      <div class="footer-info">
-        <h4>Kontak Lisa</h4>
+    <div class="container footer-inner">
+      <div class="footer-col">
+        <h4>Kontak</h4>
+        <p>Lisa S. Purba</p>
         <p>WA: <a href="https://wa.me/6282173541831">+62 821-7354-1831</a></p>
-        <p>Email: <a href="mailto:info@mitsubishijambi.com">info@mitsubishijambi.com</a></p>
+        <p>Email: info@mitsubishijambi.com</p>
       </div>
-      <div class="footer-map">
+      <div class="footer-col">
         <h4>Showroom</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18..." loading="lazy" width="250" height="150"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="200" height="150" style="border:0;" loading="lazy"></iframe>
       </div>
-      <div class="footer-social">
+      <div class="footer-col">
         <h4>Ikuti Kami</h4>
-        <a href="#">Facebook</a> | <a href="#">Instagram</a>
+        <a href="#">Facebook</a><br>
+        <a href="#">Instagram</a>
       </div>
     </div>
     <p class="footer-copy">© 2025 Mitsubishi Sales Jambi</p>
   </footer>
 
-  <!-- WhatsApp Button -->
-  <a href="https://wa.me/6282173541831" class="whatsapp-float"><img src="assets/whatsapp-icon.png" alt="WhatsApp"></a>
-
+  <!-- WhatsApp Float -->
+  <a href="https://wa.me/6282173541831" class="whatsapp-float"><img src="assets/whatsapp-icon.png" alt="WA"></a>
   <script src="js/script.js"></script>
 </body>
 </html>
