--- a/index.html
+++ b/index.html
@@ -1,124 +1,144 @@
+<!-- File: index.html -->
 <!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Mitsubishi Sales - Lisa Purba</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Beranda • Mitsubishi Sales Lisa Suryani Purba</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header class="header">
+  <!-- Header & Navigation -->
+  <header>
     <div class="container header-inner">
-      <a href="index.html" class="logo"><img src="assets/logo.svg" alt="Mitsubishi"></a>
-      <nav class="nav">
-        <ul class="nav-list">
-          <li><a href="index.html" class="active">Beranda</a></li>
+      <a href="index.html" class="logo">Mitsubishi</a>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Beranda</a></li>
           <li><a href="produk.html">Produk</a></li>
           <li><a href="simulasi.html">Simulasi Cicilan</a></li>
         </ul>
+        <button class="menu-toggle" aria-label="Toggle Menu">☰</button>
       </nav>
-      <a href="https://wa.me/6282173541831" class="btn btn-outline">Hubungi Kami</a>
     </div>
   </header>
 
-  <!-- Hero Slider -->
-  <section class="hero-slider">
-    <div class="slider" id="main-slider">
-      <div class="slide" style="background-image:url('assets/images/hero1.jpg')">
-        <div class="slide-overlay">
-          <h1>Drive Your Ambition</h1>
-          <p>Penawaran Spesial Mitsubishi Terbaru</p>
-          <a href="produk.html" class="btn btn-primary">Lihat Produk</a>
+  <main>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="container">
+        <h1>Solusi Mobil Mitsubishi Terbaik di Jambi</h1>
+        <p>Dapatkan promo eksklusif, cicilan ringan, dan layanan personal oleh Lisa Suryani Purba.</p>
+        <a href="https://wa.me/6282173541831" class="btn btn-red" target="_blank">Chat via WhatsApp</a>
+      </div>
+    </section>
+
+    <!-- Promo Section -->
+    <section class="promo">
+      <div class="container">
+        <h2>Promo Terbaru</h2>
+        <div class="promo-grid">
+          <div class="card">
+            <img src="images/promo1.jpg" alt="Diskon Akhir Tahun">
+            <h3>Diskon Akhir Tahun</h3>
+            <p>Potongan sampai 15 juta untuk pembelian Xpander.</p>
+          </div>
+          <div class="card">
+            <img src="images/promo2.jpg" alt="Bunga 0%">
+            <h3>Bunga 0%</h3>
+            <p>Tenor 1 tahun bunga 0% untuk Pajero Sport.</p>
+          </div>
+          <div class="card">
+            <img src="images/promo3.jpg" alt="DP Ringan">
+            <h3>DP Mulai 10%</h3>
+            <p>DP super ringan untuk semua varian Triton.</p>
+          </div>
         </div>
       </div>
-      <div class="slide" style="background-image:url('assets/images/hero2.jpg')">
-        <div class="slide-overlay">
-          <h1>Simulasi Cicilan Mudah</h1>
-          <p>Hitung Cicilan Sesuai Budget Anda</p>
-          <a href="simulasi.html" class="btn btn-primary">Mulai Simulasi</a>
+    </section>
+
+    <!-- Featured Products -->
+    <section class="featured">
+      <div class="container">
+        <h2>Produk Unggulan</h2>
+        <div class="product-grid">
+          <div class="card">
+            <img src="images/xpander.jpg" alt="Mitsubishi Xpander">
+            <h3>Mitsubishi Xpander</h3>
+            <p>Harga OTR Jambi: Rp 285.000.000</p>
+            <a href="https://wa.me/6282173541831" class="btn btn-outline">Info & Chat</a>
+          </div>
+          <div class="card">
+            <img src="images/pajero.jpg" alt="Mitsubishi Pajero Sport">
+            <h3>Pajero Sport</h3>
+            <p>Harga OTR Jambi: Rp 600.000.000</p>
+            <a href="https://wa.me/6282173541831" class="btn btn-outline">Info & Chat</a>
+          </div>
+          <div class="card">
+            <img src="images/triton.jpg" alt="Mitsubishi Triton">
+            <h3>Triton</h3>
+            <p>Harga OTR Jambi: Rp 450.000.000</p>
+            <a href="https://wa.me/6282173541831" class="btn btn-outline">Info & Chat</a>
+          </div>
         </div>
       </div>
-      <div class="slide" style="background-image:url('assets/images/hero3.jpg')">
-        <div class="slide-overlay">
-          <h1>Konsultasi Pribadi</h1>
-          <p>Dapatkan Bantuan Langsung Dari Lisa</p>
-          <a href="https://wa.me/6282173541831" class="btn btn-primary">Chat Sekarang</a>
+    </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <h2>Testimoni Pelanggan</h2>
+        <div class="testi-grid">
+          <div class="testi-card">
+            <p>\"Proses cepat, DP ringan, dan layanan Lisa sangat ramah!\"</p>
+            <h4>— Budi, Jambi</h4>
+          </div>
+          <div class="testi-card">
+            <p>\"Promo bunga 0% benar-benar membantu saya membeli Pajero Sport.\"</p>
+            <h4>— Sari, Jambi</h4>
+          </div>
+          <div class="testi-card">
+            <p>\"Info lengkap via WhatsApp, recommended banget!\"</p>
+            <h4>— Agus, Jambi</h4>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
-  <!-- About -->
-  <section class="about container">
-    <div class="about-inner">
-      <img src="assets/images/lisa.jpg" alt="Lisa Purba" class="about-img">
-      <div class="about-text">
-        <h2>Tentang Lisa Purba</h2>
-        <p>Halo, saya <strong>Lisa Suryani Purba</strong>, Sales Mitsubishi Jambi dengan 5+ tahun pengalaman. Saya siap membantu Anda menemukan mobil ideal dengan layanan cepat dan ramah.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Featured Products -->
-  <section class="featured container">
-    <h2 class="section-title">Produk Unggulan</h2>
-    <div class="card-grid">
-      <article class="card">
-        <img src="assets/images/suv1.jpg" alt="Xpander" class="card-img">
-        <h3 class="card-title">Mitsubishi Xpander</h3>
-        <p class="card-price">Rp 300.000.000</p>
-      </article>
-      <article class="card">
-        <img src="assets/images/sedan1.jpg" alt="Lancer" class="card-img">
-        <h3 class="card-title">Mitsubishi Lancer</h3>
-        <p class="card-price">Rp 280.000.000</p>
-      </article>
-      <article class="card">
-        <img src="assets/images/truck1.jpg" alt="Triton" class="card-img">
-        <h3 class="card-title">Mitsubishi Triton</h3>
-        <p class="card-price">Rp 350.000.000</p>
-      </article>
-    </div>
-  </section>
-
-  <!-- Promo Section -->
-  <section class="promo container">
-    <h2 class="section-title">Promo Terbaru</h2>
-    <div class="promo-grid">
-      <div class="promo-item"><img src="assets/images/promo1.jpg" alt="Promo"></div>
-      <div class="promo-item"><img src="assets/images/promo2.jpg" alt="Promo"></div>
-      <div class="promo-item"><img src="assets/images/promo3.jpg" alt="Promo"></div>
-    </div>
-  </section>
+  <!-- Floating WhatsApp Button -->
+  <a href="https://wa.me/6282173541831" class="whatsapp-chat" target="_blank" aria-label="Chat WA">
+    <img src="images/whatsapp-icon.svg" alt="WA">
+  </a>
 
   <!-- Footer -->
-  <footer class="footer">
-    <div class="container footer-inner">
-      <div class="footer-col">
-        <h4>Kontak</h4>
-        <p>Lisa S. Purba</p>
-        <p>WA: <a href="https://wa.me/6282173541831">+62 821-7354-1831</a></p>
-        <p>Email: info@mitsubishijambi.com</p>
+  <footer>
+    <div class="container footer-container">
+      <div class="footer-info">
+        <h4>Kontak Sales</h4>
+        <p>Lisa Suryani Purba</p>
+        <p>Sales Counter Mitsubishi</p>
+        <p>WA: <a href="https://wa.me/6282173541831" target="_blank">+62 821-7354-1831</a></p>
       </div>
-      <div class="footer-col">
-        <h4>Showroom</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="200" height="150" style="border:0;" loading="lazy"></iframe>
+      <div class="footer-map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!..." 
+          width="200" height="150" style="border:0;" loading="lazy"></iframe>
       </div>
-      <div class="footer-col">
-        <h4>Ikuti Kami</h4>
-        <a href="#">Facebook</a><br>
-        <a href="#">Instagram</a>
+      <div class="footer-other">
+        <h4>Info Lain</h4>
+        <ul>
+          <li><a href="#">Tentang Kami</a></li>
+          <li><a href="#">Kebijakan Privasi</a></li>
+          <li><a href="#">Syarat & Ketentuan</a></li>
+        </ul>
       </div>
     </div>
-    <p class="footer-copy">© 2025 Mitsubishi Sales Jambi</p>
+    <div class="footer-credit">
+      &copy; 2025 Mitsubishi Motors. All rights reserved.
+    </div>
   </footer>
 
-  <!-- WhatsApp Float -->
-  <a href="https://wa.me/6282173541831" class="whatsapp-float"><img src="assets/whatsapp-icon.png" alt="WA"></a>
   <script src="js/script.js"></script>
 </body>
 </html>
